Fix speaker portraits on mobile

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -28,7 +28,7 @@
     width: 100%;
   }
 
-  article.preview img {
+  article.preview .illustration {
     display: none;
   }
 
